# contest-project

./: contest.cabal
src/: Main.hs  Templates.hs  contest.hsfiles  defaultContents.hs
