name:                contest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/contest#readme
license:             BSD3
license-file:        LICENSE
author:              MichaeGon
maintainer:          lo.dnix@gmail.com
copyright:           2019 MichaeGon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable contest
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, options >= 1.2.1.1
